@@ -1,7 +1,7 @@
 /**   
  * License Agreement for Jaeksoft OpenSearchServer
  *
- * Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft
+ * Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
  * 
  * http://www.open-search-server.com
  * 
@@ -26,6 +26,38 @@ package com.jaeksoft.searchlib.crawler.web.database;
 
 public enum UrlItemFieldEnum {
 
-	url, lang, langMethod, contentBaseType, contentTypeCharset, contentEncoding, contentLength, outlink, inlink, host, when, responseCode, robotsTxtStatus, parserStatus, fetchStatus, indexStatus;
+	url,
+
+	lang,
+
+	langMethod,
+
+	contentBaseType,
+
+	contentTypeCharset,
+
+	contentEncoding,
+
+	contentLength,
+
+	outlink,
+
+	inlink,
+
+	host,
+
+	subhost,
+
+	when,
+
+	responseCode,
+
+	robotsTxtStatus,
+
+	parserStatus,
+
+	fetchStatus,
+
+	indexStatus;
 
 }
