@@ -43,6 +43,8 @@ public enum ScopeAttribute {
 
 	SEARCH_URL_HOST(Component.SESSION_SCOPE),
 
+	SEARCH_URL_SUBHOST(Component.SESSION_SCOPE),
+
 	SEARCH_URL_RESPONSE_CODE(Component.SESSION_SCOPE),
 
 	SEARCH_URL_LANG(Component.SESSION_SCOPE),
