@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 	<!--   License Agreement for Jaeksoft Open Search Server -->
 	<!--   -->
-	<!--   Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft -->
+	<!--   Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft -->
 	<!--   -->
 	<!--   This file is part of Jaeksoft Open Search Server. -->
 	<!--   http://www.open-search-server.com -->
