@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 	<!--   License Agreement for Jaeksoft Open Search Server -->
 	<!--   -->
-	<!--   Copyright (C) 2008-2009 Emmanuel Keller / Jaeksoft -->
+	<!--   Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft -->
 	<!--   -->
 	<!--   This file is part of Jaeksoft Open Search Server. -->
 	<!--   http://www.open-search-server.com -->
@@ -172,6 +172,7 @@
 			<field name="metaDescription" indexed="no" stored="compress" />
 			<field name="metaKeywords" indexed="no" stored="compress" />
 			<field name="host" indexed="yes" stored="yes" />
+			<field name="subhost" indexed="yes" stored="no" />
 		</fields>
 	</schema>
 
